fix gallery layout bug on desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,6 +642,7 @@ textarea {
 
     #dog, 
     #lotr {
+        grid-column: span 2;
         grid-row: span 2;
     }
 
